--- a/index.html
+++ b/index.html
@@ -4,16 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/java.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Ro Sham Bo</title>
 
  
 </head>
 <body>
-    <h1>Ro Sham Bo</h1>
-    <p>Lorem ipsum dolor sit amet.</p>
-
-   
+    
 </body>
 </html>
